# spheraform

./: .dockerignore  .editorconfig  .gitignore  API_EXAMPLES.md  CLAUDE.md  MANUAL_SETUP.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  Tiltfile  alembic.ini  claude.md  devspace.yaml  docker-compose.yml  makefile  pyproject.toml  pytest.ini  setup_database.sh  skaffold.yaml
alembic/: env.py
alembic/versions/: 20251201_1241_initial_schema.py  20251203_1906_e0bf894d086d_add_country_to_geoserver.py  20251206_2032_add_enriched_dataset_metadata.py  20251209_1800_add_progress_tracking.py  20251214_1200_add_s3_storage_fields.py  20251216_1200_add_max_record_count.py  20251216_1500_add_celery_task_id.py  20251221_1500_add_pmtiles_tracking.py
config/: martin-config.yaml
devspace/: devspace-api.yaml  devspace-minio.yaml  devspace-postgres.yaml  devspace-redis.yaml
docs/: HELM_MIGRATION.md  QUICKSTART.md  backup-restore.md  devspace.md  scripts.md  storage-backend-naming.md  storage-backends.md  tilt.md
helm/spheraform/: .helmignore  Chart.yaml  README.md  values-production.yaml  values-staging.yaml  values.yaml
scripts/: cleanup_postgis_cache.py  migrate_postgis_to_s3.py  monitor_storage.sh  rebuild-k8s.sh  restart-api.sh  test_celery_integration.sh  test_db_connection.py
scripts/backup/: backup_health_check.sh  postgres_backup.sh  postgres_restore.sh
tests/: conftest.py
tests/integration/: test_api_crawl_polling.py  test_api_datasets.py  test_api_download.py  test_api_download_polling.py  test_api_search.py  test_api_servers.py
tests/unit/: test_models.py  (+2 more)
(+31 files in other folders)
