[project]
name = "spheraform-aggregator"
version = "0.1.0"
description = "Platform for aggregating geospatial datasets from multiple geoservers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "GeoData Team" }
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/api",
    "packages/cli",
    "packages/client",
    "packages/pipelines"
]

[tool.uv.sources]
spheraform-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
